--- a/client/style.css
+++ b/client/style.css
@@ -42,8 +42,8 @@
 /*----------------------------------------*/
 
 /*
-    font-family: 'Old Standard TT', serif;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
+    font-family: sans-serif;
 */
 
 
@@ -130,7 +130,7 @@
 }
 .section__title--2 h2 {
     color: #313131;
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 40px;
     font-weight: 700;
 }
@@ -241,7 +241,7 @@
 }
 .fr__product__inner h4 a {
     color: #444;
-    font-family: Old Standard TT;
+    font-family: sans-serif;
     font-size: 17px;
     font-weight: 600;
     text-transform: capitalize;
@@ -257,7 +257,7 @@
 }
 .fr__pro__prize li {
     color: #313131;
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 500;
     margin: 0 5px;
@@ -297,7 +297,7 @@
     background: #c43b68 none repeat scroll 0 0;
     color: #fff;
     display: inline-block;
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 15px;
     height: 50px;
     line-height: 50px;
@@ -335,7 +335,7 @@
 }
 .product__offer span {
     color: #c43b68;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 13px;
     text-transform: uppercase;
 }
@@ -474,14 +474,14 @@
 }
 .product__details h2 {
     color: #444;
-    font-family: Old Standard TT;
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 600;
     text-transform: capitalize;
 }
 .pro__prize li {
     color: #313131;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 600;
 }
@@ -632,7 +632,7 @@
 .bl__date span {
     color: #777777;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     padding-bottom: 7px;
     position: relative;
@@ -662,7 +662,7 @@
 .blog__btn a {
     color: #c43b68;
     display: inline-block;
-    font-family: "Poppins",sans-serif;
+    font-family: sans-serif;
     font-size: 15px;
     transition: all 0.4s ease 0s;
 }
@@ -857,7 +857,7 @@
 }
 .ht__promo__details h4 {
     color: #ffffff;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 60px;
     font-weight: 700;
     position: relative;
@@ -903,7 +903,7 @@
 .big__promo__details h4 span {
     color: #c43b68;
     display: block;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 72px;
     font-weight: 700;
     text-transform: uppercase;
@@ -953,7 +953,7 @@
 .ht__promo__inner h4 {
     color: #000000;
     display: inline-block;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 60px;
     font-weight: 700;
     position: relative;
@@ -1006,7 +1006,7 @@
 }
 .ht__about__inner h4 {
     color: #b3b3b3;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 90px;
     font-weight: 700;
     line-height: 40px;
@@ -1032,7 +1032,7 @@
     border: 1px solid #c43b68;
     color: #ffffff;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     height: 40px;
     line-height: 40px;
     padding: 0 28px;
@@ -1079,7 +1079,7 @@
 }
 .ht__bann__details p span.theme-color {
     color: #c43b68;
-    font-family: "Poppins",sans-serif;
+    font-family: sans-serif;
     font-weight: 700;
     margin-top: 16px;
     display: inline-block;
@@ -1138,7 +1138,7 @@
 }
 .htc__best__product__details h2 {
     color: #444;
-    font-family: "Old Standard TT",serif;
+    font-family: sans-serif;
     font-size: 17px;
     font-weight: 600;
     margin-bottom: 17px;
@@ -1165,7 +1165,7 @@
 }
 .top__pro__prize li {
     color: #313131;
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 15px;
     font-weight: 500;
 }
@@ -1241,7 +1241,7 @@
 }
 .ht__intrac__details h1 {
     color: #ffffff;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 72px;
     font-weight: 700;
     line-height: 91px;
@@ -1252,7 +1252,7 @@
     background: #fff none repeat scroll 0 0;
     color: #222222;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     height: 50px;
     line-height: 50px;
@@ -1292,7 +1292,7 @@
 }
 .inc__banner--2 .ht__intrac__details h6 {
     color: #ffffff;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 46px;
     font-weight: 700;
     letter-spacing: 2px;
@@ -1344,7 +1344,7 @@
     background: #212121 none repeat scroll 0 0;
     color: #c43b68;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     height: 50px;
     line-height: 50px;
     padding: 0 26px;
@@ -1370,7 +1370,7 @@
 }
 .breadcrumb-item {
     color: #494949;
-    font-family: "Poppins",sans-serif;
+    font-family: sans-serif;
     font-size: 18px;
     font-weight: 500;
     text-transform: capitalize;
@@ -1601,7 +1601,7 @@
 }
 .ht__com__btn li a {
     color: #ed1c24;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -1654,7 +1654,7 @@
     height: 30px;
     display: inline-block;
     line-height: 30px;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 13px;
     text-transform: uppercase;
     font-weight: 600;
@@ -1695,7 +1695,7 @@
 }
 .htc__list__details h2 {
     color: #444;
-    font-family: Old Standard TT;
+    font-family: sans-serif;
     font-size: 19px;
     font-weight: 600;
     margin-bottom: 12px;
@@ -1725,7 +1725,7 @@
 .ht__list__product .product__action li.ht__addto__cart a {
     background: #c43b68 none repeat scroll 0 0;
     color: #ffffff;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 500;
     height: 50px;
     line-height: 50px;
@@ -1840,21 +1840,21 @@ select.ht__select {
 }
 .ht__product__dtl h2 {
     color: #444;
-    font-family: Old Standard TT;
+    font-family: sans-serif;
     font-size: 20px;
     font-weight: 600;
     text-transform: uppercase;
 }
 .ht__product__dtl h6 {
     color: #100d13;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     margin-top: 11px;
     margin-bottom: 11px;
 }
 .ht__product__dtl h6 span {
     color: #868686;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 15px;
     text-transform: uppercase;
 }
@@ -1870,7 +1870,7 @@ select.ht__select {
 .sin__desc p {
     color: #868686;
     display: inline-block;
-    font-family: 'Old Standard TT', serif;
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 400;
     text-transform: capitalize;
@@ -1878,7 +1878,7 @@ select.ht__select {
 }
 .sin__desc p span {
     color: #100d13;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     text-transform: capitalize;
 }
@@ -1908,7 +1908,7 @@ select.ht__select {
     border: 1px solid #d7d7d7;
     color: #212121;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 12px;
     font-weight: 600;
     height: 20px;
@@ -1989,7 +1989,7 @@ select.ht__select {
 }
 .pro__details__tab li a {
     color: #9f9f9f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
@@ -2075,7 +2075,7 @@ select.select__size {
     text-transform: uppercase;
     vertical-align: middle;
     white-space: nowrap;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     color: #000000;
     font-weight: 600;
     font-size: 16px;
@@ -2104,7 +2104,7 @@ select.select__size {
     color: #313131;
     font-size: 14px;
     width: 120px;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
 }
 .table-content table td.product-name a {
@@ -2131,7 +2131,7 @@ select.select__size {
 .table-content table .product-price .amount {
     color: #313131;
     font-size: 14px;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     font-weight: 600;
 }
@@ -2153,7 +2153,7 @@ select.select__size {
 .buttons-cart a {
     background: #ebebeb none repeat scroll 0 0;
     color: #3f3f3f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 12px;
     font-weight: 500;
     height: 62px;
@@ -2331,7 +2331,7 @@ a.shipping-calculator-button:hover{
 }
 .ht__coupon__code span {
     color: #3f3f3f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 500;
     text-transform: uppercase;
 }
@@ -2356,7 +2356,7 @@ a.shipping-calculator-button:hover{
     background: #212121 none repeat scroll 0 0;
     color: #fff;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 500;
     height: 56px;
@@ -2386,7 +2386,7 @@ a.shipping-calculator-button:hover{
 }
 .cart__total span {
     color: #3f3f3f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
@@ -2398,7 +2398,7 @@ a.shipping-calculator-button:hover{
     background: #ebebeb none repeat scroll 0 0;
     color: #3f3f3f;
     display: block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 500;
     height: 65px;
     line-height: 65px;
@@ -2428,7 +2428,7 @@ a.shipping-calculator-button:hover{
 }
 .cart__desc li {
     color: #3f3f3f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
@@ -2445,7 +2445,7 @@ a.shipping-calculator-button:hover{
 }
 .cart__price li {
     color: #3f3f3f;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 600;
 }
@@ -2471,7 +2471,7 @@ a.shipping-calculator-button:hover{
     background: rgba(63, 217, 178, 0.86) none repeat scroll 0 0;
     color: #212121;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 13px;
     font-weight: 500;
     height: 40px;
@@ -2546,7 +2546,7 @@ a.shipping-calculator-button:hover{
     border-radius: 100%;
     color: #3f3f3f;
     display: inline-block;
-    font-family: "Poppins",sans-serif;
+    font-family: sans-serif;
     font-size: 13px;
     font-weight: 600;
     height: 45px;
@@ -2574,7 +2574,7 @@ a.shipping-calculator-button:hover{
 
 .htc__blog__details__wrap span.ht__fashion__show {
     color: #c43b68;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     text-transform: uppercase;
 }
@@ -2651,7 +2651,7 @@ a.shipping-calculator-button:hover{
     border: 1px solid #c43b68;
     color: #212121;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     height: 50px;
     line-height: 50px;
@@ -2689,7 +2689,7 @@ a.shipping-calculator-button:hover{
 .ht__comment__details span {
     color: #949494;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 500;
 }
 .ht__comment__details p {
@@ -2701,7 +2701,7 @@ a.shipping-calculator-button:hover{
     border-radius: 4px;
     color: #333333;
     display: inline-block;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     height: 30px;
     line-height: 28px;
@@ -2837,7 +2837,7 @@ a.shipping-calculator-button:hover{
     background: #c43b68 none repeat scroll 0 0;
     border: 1px solid #c43b68;
     color: #fff;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     font-weight: 600;
     height: 50px;
@@ -2881,7 +2881,7 @@ a.shipping-calculator-button:hover{
     border-bottom: 1px solid #c1c1c1;
     border-right: 1px solid #c1c1c1;
     color: #000;
-    font-family: Old Standard TT;
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 600;
     padding: 15px 10px;
@@ -3216,12 +3216,12 @@ ul.htc__instagram__posts.owl-carousel li img {
     letter-spacing: 1px;
     text-transform: uppercase;
     margin-bottom: 10px;
-    font-family: "Poppins";
+    font-family: sans-serif;
     cursor: pointer;
 }
 .accordion .accordion__title:before{
     content: "\f278";
-    font-family: 'Material-Design-Iconic-Font';
+    font-family: sans-serif;
     display: inline-block;
     padding-right: 10px;
     transition: all 0.3s ease-in-out 0s;
@@ -3237,13 +3237,13 @@ ul.htc__instagram__posts.owl-carousel li img {
 
 /*Accordion body form styles*/
 .accordion__body__form{
-    font-family: "Poppins";
+    font-family: sans-serif;
 }
 .accordion__body__form .checkout-method__subtitle{
     letter-spacing: 1px;
     margin-bottom: 20px;
     color: #8c8c8c;
-    font-family: 'OldStandardTT';
+    font-family: sans-serif;
 }
 .accordion__body__form .checkout-method__title{
     font-size: 14px;
@@ -3337,7 +3337,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     height: 40px;
     line-height: 40px;
     padding: 0 15px;
-    font-family: "poppins";
+    font-family: sans-serif;
     transition: all 0.3s ease-in-out 0s;
     border: 1px solid #888;
 }
@@ -3363,12 +3363,12 @@ ul.htc__instagram__posts.owl-carousel li img {
     margin-bottom: 15px;
 }
 .shipinfo p{
-    font-family: "Poppins";
+    font-family: sans-serif;
 }
 .shipinfo .ship-to-another-trigger{
     display: inline-block;
     margin-top: 20px;
-    font-family: "Poppins";
+    font-family: sans-serif;
     font-size: 16px;
 }
 .shipinfo .ship-to-another-trigger i.zmdi{
@@ -3389,7 +3389,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     margin-top: 0px;
 }
 .shipmethod .single-input label{
-    font-family: "Poppins";
+    font-family: sans-serif;
     color: #3333;
     font-weight: 500;
 }
@@ -3399,7 +3399,7 @@ ul.htc__instagram__posts.owl-carousel li img {
 .paymentinfo .single-method a{
     display: inline-block;
     margin-top: 15px;
-    font-family: "Poppins";
+    font-family: sans-serif;
     font-size: 16px;
 }
 
@@ -3419,7 +3419,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 1px;
-    font-family: "poppins";
+    font-family: sans-serif;
     font-size: 16px;
     font-weight: 600;
     color: #3f3f3f;
@@ -3444,7 +3444,7 @@ ul.htc__instagram__posts.owl-carousel li img {
 }
 .order-details .order-details__item .single-item .single-item__content a{
     font-size: 16px;
-    font-family: "OldStandardTT";
+    font-family: sans-serif;
     letter-spacing: 1px;
     color: #666;
     transition: all 0.3s ease-in-out 0s;
@@ -3453,7 +3453,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     color: #c43b68;
 }
 .order-details .order-details__item .single-item .single-item__content span{
-    font-family: "Poppins";
+    font-family: sans-serif;
     font-weight: 600;
     display: block;
 }
@@ -3498,7 +3498,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     width: 30%;
     text-align: left;
     font-weight: 600;
-    font-family: "Poppins";
+    font-family: sans-serif;
 }
 .order-details .ordre-details__total{
     margin: 0 30px;
@@ -3522,7 +3522,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     width: 30%;
     text-align: left;
     font-weight: 700;
-    font-family: "Poppins";
+    font-family: sans-serif;
     letter-spacing: 1px;
 }
 
@@ -3536,7 +3536,7 @@ ul.htc__instagram__posts.owl-carousel li img {
     text-transform: uppercase;
     background: #212121;
     color: #ffffff;
-    font-family: "Poppins";
+    font-family: sans-serif;
     padding: 0 45px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -3561,6 +3561,11 @@ ul.htc__instagram__posts.owl-carousel li img {
 }
 .slick-initialized .slick-slide {
     outline: none;
+}
+.price-container {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
